[package]
name = "vorbisenc-sys"
version = "0.0.1"
description = "FFI for the vorbisenc library"
license = "MIT"
authors = ["Jan Jansen <farodin91@googlemail.com>"]
links = "vorbisenc"
build = "libvorbisenc/build.rs"
repository = "https://github.com/farodin91/vorbisenc-sys"

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"

[dependencies]
libc = "0.2.7"
vorbis-sys = "0.0.8"
